kubernetes/clusters/home/infrastructure/storage/minio/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-console
  namespace: minio
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`minio.syslabs.dev`)
      kind: Rule
      services:
        - name: minio-minio-console
          port: 9001
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-s3
  namespace: minio
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`s3.syslabs.dev`)
      kind: Rule
      services:
        - name: minio-minio
          port: 9000
  tls: {}
